test/scc/stmt/semantic-errors/033.a
033.t:6:14: error: expression must have scalar type